v11/fixtures/ast/errors/interface_missing_method/source.able
interface Greeter for Self
{
  fn greet (self: Self) -> String
}
struct Widget {
  id: i32
}
fn use<T: Greeter>(value: T) -> String {
  value.greet();
}
fn main() -> void {
  widget := Widget { id: 1 };
  use(widget);
}
